Closed Bug 1630779 Opened 6 years ago Closed 6 years ago

Fix DefinitelyDifferentValue

Categories

(Core :: JavaScript Engine: JIT, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: evilpies, Assigned: evilpies)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

This optimization has been broken since the introduction of MSpectreMaskIndex.

I think using MConstant::equals was /probably/ fine, but I find it hard to reason about.
This also potentially allows comparing double 1.0 to int32 1 or similar.

Assignee: nobody → evilpies
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: