Bug 1630779 - Fix DefinitelyDifferentValue. r=iain

I think using MConstant::equals was /probably/ fine, but I find it hard to reason about.
This also potentially allows comparing double 1.0 to int32 1 or similar.

Differential Revision: https://phabricator.services.mozilla.com/D71240